# pycolor-palette

./: Doxyfile  README.md
docs/: index.md
pycolor-palette/: README.md  example.py  pyproject.toml
pycolor-palette/docs/ru/: article.md
pycolor-palette/pycolor_palette_loguru/: __init__.py  paint.py  pygments_colorschemes.py
pycolor-palette/pycolor_palette_loguru/logger/: __init__.py  logger.py
pycolor-palette/tests/: pytest_example.py  unittest_example.py
